--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "e-commerce-web-react",
   "version": "0.1.0",
   "private": true,
+  "keywords": [],
+  "license": "MIT",
+  "homepage": "https://kelvin9314.github.io/e-commerce-web-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^10.0.1",
@@ -19,7 +22,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "yarn eslint ./src --fix"
+    "lint": "yarn eslint ./src --fix",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +49,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "gh-pages": "^2.2.0"
   }
 }
