--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^10.0.1",
     "@testing-library/user-event": "^10.0.0",
+    "dotenv": "^8.2.0",
     "minimist": "^1.2.5",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
