--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "serialize-javascript": "^3.0.0"
   },
   "devDependencies": {
