--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "serialize-javascript": "^3.0.0"
+    "serialize-javascript": "^3.0.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
